force-app/main/default/objects/Form_Builder__TFile__c/Form_Builder__TFile__c.object-meta.xml
<CustomObject>
    <label>TFile</label>
    <nameField>
        <displayFormat>TF-{00000000}</displayFormat>
        <label>TFile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>