force-app/main/default/objects/Form_Builder__TFile__c/fields/Form_Builder__ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__ContentDocumentId__c</fullName>
    <label>ContentDocumentId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>