force-app/main/default/objects/Form_Builder__TFile__c/fields/Form_Builder__File_Extention__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__File_Extention__c</fullName>
    <label>File Extention</label>
    <length>80</length>
    <type>Text</type>
</CustomField>