force-app/main/default/objects/Form_Builder__TFile__c/fields/Form_Builder__File_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>