force-app/main/default/objects/Form_Builder__TFile__c/fields/Form_Builder__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>120</length>
    <type>Text</type>
</CustomField>