force-app/main/default/objects/Form_Builder__TFile__c/fields/Form_Builder__Parent_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Parent_RecordId__c</fullName>
    <label>Parent RecordId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>